Bugfix: font not showing in mobile or safari

--- a/src/app/components/IdeaDisplay/ideaDisplay.module.css
+++ b/src/app/components/IdeaDisplay/ideaDisplay.module.css
@@ -9,7 +9,9 @@
 
 .idea {
   font-family: var(--font-body-copy);
-  font-size: 3.2rem;
+  font-size: 3.5rem;
+  font-style: italic;
+  font-weight: 500; 
   text-transform: lowercase;
 }
 
